--- a/styles/zigzag.less
+++ b/styles/zigzag.less
@@ -5,4 +5,15 @@
 @import "ui-variables";
 
 .zigzag {
+  padding-top: .62em;
+  padding-bottom: 1.62em;
+  text-align: center;
+}
+
+.card-title {
+  font-size: 2.5em;
+}
+
+.card p {
+  font-size: 1.3em;
 }
